# quant-data

./: .gitignore  FRED_GUIDE.md  FRED_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml
_meta/: ingestion-log.parquet  ticker-mapping.parquet
config/: datasets.yaml  ingest.yaml  providers.yaml
equities/index_membership/: sp500.parquet
ingest/: __init__.py  __main__.py  ingest_corporate_actions.py  ingest_fundamentals.py  ingest_macro.py  ingest_macro_alfred.py  ingest_ohlcv.py  ingest_sp500_membership.py
ingest/common/: __init__.py  base_client.py  config_utils.py  eodhd_client.py  fred_client.py  io_parquet.py  logging.py  provider.py  schema.py  utils.py  wrds_client.py
scripts/: example_usage.py  inspect_table.py  validate_data.py
